# wru

./: .gitignore  README.md
field_scout/: Cargo.toml  README.md
field_scout/src/: main.rs
file_intake/: Cargo.toml  README.md  docker-compose.yml
file_intake/rabbitmq/init/: definitions.json
processing/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  main.py  pyproject.toml  requirements.txt
result/: README.md
