[package]
name = "field_scout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
gethostname = "0.4.3"
minio = "0.1.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tokio = "1.36.0"
