[tool.poetry]
name = "processing-project"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11"
face_recognition = "1.3.0"
pika = "1.3.2"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
